<resources>
    <string name="application_name">nibu</string>

    <!-- Strings related activity dashboard -->
    <string name="routines_daily_routines">Daily routines</string>
    <string name="routines_health">Health</string>
    <string name="routines_settings">Settings</string>
    <string name="routine_list_feeding">Feeding</string>
    <string name="routine_list_sleep">Sleep</string>
    <string name="routine_list_diapers">Diapers</string>
    <string name="routine_list_physical_activity">Physical activity</string>
    <string name="routine_list_walks">Walks</string>
    <string name="activity_breast_side_left">Left breast</string>
    <string name="activity_breast_side_right">Right breast</string>
    <string name="activity_breast_side_both">Both breasts</string>
    <string name="activity_start_date">Start date:</string>
    <string name="activity_end_date">End date:</string>
    <string name="activity_start_time">Start time:</string>
    <string name="activity_end_time">End time:</string>
    <string name="activity_add_breast_feeding">Add breast feeding</string>
    <string name="activity_type_meal">Meal</string>


    <!-- Strings related activity register -->
    <string name="splash_screen_init">Initialization</string>
    <string name="splash_screen_babies_list">Getting babies info</string>
    <string name="splash_screen_routines_list">Getting activities data</string>


    <!-- Strings related activity register -->
    <string name="register_title">Register</string>
    <string name="register_question">New to nibu?</string>
    <string name="register_sign_up">Sign up</string>

    <!-- Strings related activity login -->
    <string name="login_signup">Sign in</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="action_sign_in_short">Sign in</string>

    <!-- Strings related to menus -->

    <string name="title_main">Main activity</string>

    <!-- Strings related to Credentials -->
    <string name="credentials_user_id">user_id</string>
    <string name="credentials_user_name">user_name</string>
    <string name="credentials_user_email">user_email</string>
    <string name="credentials_user_sid">user_sid</string>

    <string name="credentials_token_type">token_type</string>
    <string name="credentials_token_expires">token_expires</string>
    <string name="credentials_token_access">token_access</string>
    <string name="credentials_token_refresh">token_refresh</string>

    <string name="credentials_selected_baby_sid">selected_baby_sid</string>

    <!-- Metrics -->
    <string name="min_short"> min </string>
    <string name="hour_short"> h </string>
    <string name="day_short"> d </string>

    <!-- Menu add daily routine -->
    <string name="menu_add_daily_routine_title">Choose daily routine to add:</string>
    <string name="menu_add_breastfeeding">Breastfeeding</string>
    <string name="menu_add_formula">Formula milk</string>
    <string name="menu_add_pump">Breast pump milk</string>
    <string name="menu_add_solids">Solids</string>
    <string name="menu_add_medicines">Medicines</string>
    <string name="menu_add_activity">Activity</string>
    <string name="menu_add_sleep">Sleep</string>
    <string name="menu_add_nappy">Nappy</string>

    <!-- Text defaults -->
    <string name="lorem_ipsum_short">lorem ipsum</string>
    <string name="lorem_ipsum_long">Lorem ipsum dolor sit amet, habemus phaedrum constituto ne quo, nec viderer menandri ad.</string>

    <string-array name="breast_side">
        <item>Left breast</item>
        <item>Right breast</item>
        <item>Both breasts</item>
    </string-array>

    <plurals name="number_of_weeks">
        <item quantity="one">%1$s (%2$d week)</item>
        <item quantity="many">%1$s (%2$d weeks)</item>
        <item quantity="other">%1$s (%2$d weeks)</item>
    </plurals>

</resources>
